--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+body {
+  background-image: url("./assets/udundi_woods.png");
+}
+
 /*!
  * Bootstrap v4.5.0 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
@@ -18,7 +22,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: teal;
+  --primary: white;
   --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
@@ -154,13 +158,13 @@ sup {
 }
 
 a {
-  color: teal;
+  color: white;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #003434;
+  color: #d9d9d9;
   text-decoration: underline;
 }
 
@@ -1928,23 +1932,23 @@ pre code {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #b8dbdb;
+  background-color: white;
 }
 
 .table-primary th,
 .table-primary td,
 .table-primary thead th,
 .table-primary tbody + tbody {
-  border-color: #7abdbd;
+  border-color: white;
 }
 
 .table-hover .table-primary:hover {
-  background-color: #a7d2d2;
+  background-color: #f2f2f2;
 }
 
 .table-hover .table-primary:hover > td,
 .table-hover .table-primary:hover > th {
-  background-color: #a7d2d2;
+  background-color: #f2f2f2;
 }
 
 .table-secondary,
@@ -2250,10 +2254,10 @@ pre code {
 .form-control:focus {
   color: #495057;
   background-color: #fff;
-  border-color: #01ffff;
+  border-color: white;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 128, 128, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(0, 128, 128, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.25);
 }
 
 .form-control::-webkit-input-placeholder {
@@ -2765,8 +2769,8 @@ textarea.form-control {
 
 .btn:focus, .btn.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 128, 128, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(0, 128, 128, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.25);
 }
 
 .btn.disabled, .btn:disabled {
@@ -2783,42 +2787,42 @@ fieldset:disabled a.btn {
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: teal;
-  border-color: teal;
+  color: #212529;
+  background-color: white;
+  border-color: white;
 }
 
 .btn-primary:hover {
-  color: #fff;
-  background-color: #005a5a;
-  border-color: #004d4d;
+  color: #212529;
+  background-color: #ececec;
+  border-color: #e6e6e6;
 }
 
 .btn-primary:focus, .btn-primary.focus {
-  color: #fff;
-  background-color: #005a5a;
-  border-color: #004d4d;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(38, 147, 147, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(38, 147, 147, 0.5);
+  color: #212529;
+  background-color: #ececec;
+  border-color: #e6e6e6;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(222, 222, 223, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(222, 222, 223, 0.5);
 }
 
 .btn-primary.disabled, .btn-primary:disabled {
-  color: #fff;
-  background-color: teal;
-  border-color: teal;
+  color: #212529;
+  background-color: white;
+  border-color: white;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
-  color: #fff;
-  background-color: #004d4d;
-  border-color: #004040;
+  color: #212529;
+  background-color: #e6e6e6;
+  border-color: #dfdfdf;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(38, 147, 147, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(38, 147, 147, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(222, 222, 223, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(222, 222, 223, 0.5);
 }
 
 .btn-secondary {
@@ -3095,37 +3099,37 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: teal;
-  border-color: teal;
+  color: white;
+  border-color: white;
 }
 
 .btn-outline-primary:hover {
-  color: #fff;
-  background-color: teal;
-  border-color: teal;
+  color: #212529;
+  background-color: white;
+  border-color: white;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 128, 128, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(0, 128, 128, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
 }
 
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: teal;
+  color: white;
   background-color: transparent;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
-  color: #fff;
-  background-color: teal;
-  border-color: teal;
+  color: #212529;
+  background-color: white;
+  border-color: white;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-primary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 128, 128, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(0, 128, 128, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
 }
 
 .btn-outline-secondary {
@@ -3368,12 +3372,12 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: teal;
+  color: white;
   text-decoration: none;
 }
 
 .btn-link:hover {
-  color: #003434;
+  color: #d9d9d9;
   text-decoration: underline;
 }
 
@@ -3670,7 +3674,7 @@ input[type="button"].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: teal;
+  background-color: white;
 }
 
 .dropdown-item.disabled, .dropdown-item:disabled {
@@ -4062,23 +4066,23 @@ input[type="button"].btn-block {
 
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: teal;
-  background-color: teal;
+  border-color: white;
+  background-color: white;
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 128, 128, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(0, 128, 128, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.25);
 }
 
 .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #01ffff;
+  border-color: white;
 }
 
 .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
   color: #fff;
-  background-color: #34ffff;
-  border-color: #34ffff;
+  background-color: white;
+  border-color: white;
 }
 
 .custom-control-input[disabled] ~ .custom-control-label, .custom-control-input:disabled ~ .custom-control-label {
@@ -4128,8 +4132,8 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: teal;
-  background-color: teal;
+  border-color: white;
+  background-color: white;
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -4137,11 +4141,11 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(0, 128, 128, 0.5);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
-  background-color: rgba(0, 128, 128, 0.5);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .custom-radio .custom-control-label::before {
@@ -4153,7 +4157,7 @@ input[type="button"].btn-block {
 }
 
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(0, 128, 128, 0.5);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .custom-switch {
@@ -4194,7 +4198,7 @@ input[type="button"].btn-block {
 }
 
 .custom-switch .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(0, 128, 128, 0.5);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .custom-select {
@@ -4216,10 +4220,10 @@ input[type="button"].btn-block {
 }
 
 .custom-select:focus {
-  border-color: #01ffff;
+  border-color: white;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 128, 128, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(0, 128, 128, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.25);
 }
 
 .custom-select:focus::-ms-value {
@@ -4281,9 +4285,9 @@ input[type="button"].btn-block {
 }
 
 .custom-file-input:focus ~ .custom-file-label {
-  border-color: #01ffff;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 128, 128, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(0, 128, 128, 0.25);
+  border-color: white;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.25);
 }
 
 .custom-file-input[disabled] ~ .custom-file-label,
@@ -4347,16 +4351,16 @@ input[type="button"].btn-block {
 }
 
 .custom-range:focus::-webkit-slider-thumb {
-  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 128, 128, 0.25);
-          box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 128, 128, 0.25);
+  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(255, 255, 255, 0.25);
+          box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(255, 255, 255, 0.25);
 }
 
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 128, 128, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(255, 255, 255, 0.25);
 }
 
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 128, 128, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(255, 255, 255, 0.25);
 }
 
 .custom-range::-moz-focus-outer {
@@ -4367,7 +4371,7 @@ input[type="button"].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: teal;
+  background-color: white;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4386,7 +4390,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-webkit-slider-thumb:active {
-  background-color: #34ffff;
+  background-color: white;
 }
 
 .custom-range::-webkit-slider-runnable-track {
@@ -4402,7 +4406,7 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: teal;
+  background-color: white;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4421,7 +4425,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-moz-range-thumb:active {
-  background-color: #34ffff;
+  background-color: white;
 }
 
 .custom-range::-moz-range-track {
@@ -4440,7 +4444,7 @@ input[type="button"].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: teal;
+  background-color: white;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4458,7 +4462,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-ms-thumb:active {
-  background-color: #34ffff;
+  background-color: white;
 }
 
 .custom-range::-ms-track {
@@ -4590,7 +4594,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: teal;
+  background-color: white;
 }
 
 .nav-fill .nav-item {
@@ -5369,14 +5373,14 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: teal;
+  color: white;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
 
 .page-link:hover {
   z-index: 2;
-  color: #003434;
+  color: #d9d9d9;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -5385,8 +5389,8 @@ input[type="button"].btn-block {
 .page-link:focus {
   z-index: 3;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 128, 128, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(0, 128, 128, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.25);
 }
 
 .page-item:first-child .page-link {
@@ -5403,8 +5407,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: teal;
-  border-color: teal;
+  background-color: white;
+  border-color: white;
 }
 
 .page-item.disabled .page-link {
@@ -5490,19 +5494,19 @@ a.badge:hover, a.badge:focus {
 }
 
 .badge-primary {
-  color: #fff;
-  background-color: teal;
+  color: #212529;
+  background-color: white;
 }
 
 a.badge-primary:hover, a.badge-primary:focus {
-  color: #fff;
-  background-color: #004d4d;
+  color: #212529;
+  background-color: #e6e6e6;
 }
 
 a.badge-primary:focus, a.badge-primary.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 128, 128, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(0, 128, 128, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
 }
 
 .badge-secondary {
@@ -5665,17 +5669,17 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-primary {
-  color: #004343;
-  background-color: #cce6e6;
-  border-color: #b8dbdb;
+  color: #858585;
+  background-color: white;
+  border-color: white;
 }
 
 .alert-primary hr {
-  border-top-color: #a7d2d2;
+  border-top-color: #f2f2f2;
 }
 
 .alert-primary .alert-link {
-  color: #001010;
+  color: #6c6c6c;
 }
 
 .alert-secondary {
@@ -5821,7 +5825,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: teal;
+  background-color: white;
   -webkit-transition: width 0.6s ease;
   transition: width 0.6s ease;
 }
@@ -5923,8 +5927,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: teal;
-  border-color: teal;
+  background-color: white;
+  border-color: white;
 }
 
 .list-group-item + .list-group-item {
@@ -6092,19 +6096,19 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-primary {
-  color: #004343;
-  background-color: #b8dbdb;
+  color: #858585;
+  background-color: white;
 }
 
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #004343;
-  background-color: #a7d2d2;
+  color: #858585;
+  background-color: #f2f2f2;
 }
 
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #004343;
-  border-color: #004343;
+  background-color: #858585;
+  border-color: #858585;
 }
 
 .list-group-item-secondary {
@@ -7137,13 +7141,13 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: teal !important;
+  background-color: white !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #004d4d !important;
+  background-color: #e6e6e6 !important;
 }
 
 .bg-secondary {
@@ -7265,7 +7269,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: teal !important;
+  border-color: white !important;
 }
 
 .border-secondary {
@@ -10631,11 +10635,11 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: teal !important;
+  color: white !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #003434 !important;
+  color: #d9d9d9 !important;
 }
 
 .text-secondary {
