--- a/main.scss
+++ b/main.scss
@@ -1,5 +1,9 @@
 $theme-colors: (
-  "primary": teal
+  "primary": white
 );
+
+body {
+    background-image: url("./assets/udundi_woods.png");
+  }
 
 @import "node_modules/bootstrap/scss/bootstrap";
