--- a/main.scss
+++ b/main.scss
@@ -2,8 +2,22 @@ $theme-colors: (
   "primary": white
 );
 
+$btn-border-radius: 2em;
+
 body {
-    background-image: url("./assets/udundi_woods.png");
-  }
+  background-image: url("./assets/udundi_woods.png");
+}
+
+.social-buttons {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.social-btn {
+  margin: 5px 0;
+}
 
 @import "node_modules/bootstrap/scss/bootstrap";
