--- a/main.css
+++ b/main.css
@@ -2,6 +2,30 @@ body {
   background-image: url("./assets/udundi_woods.png");
 }
 
+.sidebar {
+  background-color: #611818;
+  min-height: 800px;
+  min-width: 460px;
+}
+
+.header-section {
+  color: white;
+  margin: 400px 0 0 0;
+}
+
+.header-section h1 {
+  font-family: 'Playfair Display', sans-serif;
+  font-weight: 700;
+}
+
+.detail-sub-section {
+  margin: -20px 0 0 90px;
+}
+
+.detail-btn {
+  margin: 0 10px 0 0;
+}
+
 .social-buttons {
   position: fixed;
   bottom: 30px;
@@ -384,11 +408,11 @@ h1, h2, h3, h4, h5, h6,
 }
 
 h1, .h1 {
-  font-size: 2.5rem;
+  font-size: 12.5rem;
 }
 
 h2, .h2 {
-  font-size: 2rem;
+  font-size: 3.125rem;
 }
 
 h3, .h3 {
