--- a/main.scss
+++ b/main.scss
@@ -3,9 +3,35 @@ $theme-colors: (
 );
 
 $btn-border-radius: 2em;
+$h1-font-size: 200px;
+$h2-font-size: 50px;
 
 body {
   background-image: url("./assets/udundi_woods.png");
+}
+
+.sidebar {
+  background-color: #611818;
+  min-height: 800px;
+  min-width: 460px;
+}
+
+.header-section {
+  color: white;
+  margin: 400px 0 0 0;
+}
+  
+.header-section h1 {
+  font-family: 'Playfair Display', sans-serif;
+  font-weight: 700;
+}
+  
+.detail-sub-section {
+  margin: -20px 0 0 90px;
+}
+  
+.detail-btn {
+  margin: 0 10px 0 0;
 }
 
 .social-buttons {
