google fonts imported

--- a/main.scss
+++ b/main.scss
@@ -47,3 +47,4 @@ body {
 }
 
 @import "node_modules/bootstrap/scss/bootstrap";
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;900&display=swap');
