--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;900&display=swap");
 body {
   background-image: url("./assets/udundi_woods.png");
 }
