--- a/main.scss
+++ b/main.scss
@@ -10,6 +10,8 @@ body {
   background-image: url("./assets/udundi_woods.png");
 }
 
+//Sidebar and Main Header
+
 .sidebar {
   background-color: #611818;
   min-height: 800px;
@@ -34,6 +36,8 @@ body {
   margin: 0 10px 0 0;
 }
 
+//Social Media Buttons
+
 .social-buttons {
   position: fixed;
   bottom: 30px;
@@ -45,6 +49,8 @@ body {
 .social-btn {
   margin: 5px 0;
 }
+
+//Card
 
 .card {
   line-height: 2em;
@@ -84,6 +90,8 @@ body {
   border-radius: 0 !important;
   margin: 40px 0;
 }
+
+//Animations
 
 .content {
   position: absolute;
